--- a/index.html
+++ b/index.html
@@ -8,13 +8,29 @@
   </head>
   <body>
    <header>
+    <section class="navbar clear">
+      <nav class="nav_left">
+        <div class="logo">
+          <img src="img/logo.png" alt="logo del sito">
+        </div>
+        <ul>
+          <li><a href="#">il metodo</a></li>
+          <li><a href="#">la tecnologia</a></li>
+          <li><a href="#">real-life english</a></li>
+          <li><a href="#">soluzioni aziendali</a></li>
+        </ul>
+      </nav>
+    </section>
 
+    <section class="display">h1</section>
    </header>
    <main>
-
+    <section class="banner">banner</section>
+    <section class="maintop"></section>
+    <section class="mainbottom"></section>
    </main>
    <footer>
-    
+
    </footer>
   </body>
 </html>
