--- a/index.html
+++ b/index.html
@@ -8,24 +8,38 @@
   </head>
   <body>
    <header>
-    <section class="navbar clear">
+    <section class="navbar clear padding_default">
       <nav class="nav_left">
-        <div class="logo">
-          <img src="img/logo.png" alt="logo del sito">
-        </div>
         <ul>
+          <li><img src="img/logo.png" alt="logo del sito"></li>
           <li><a href="#">il metodo</a></li>
           <li><a href="#">la tecnologia</a></li>
           <li><a href="#">real-life english</a></li>
           <li><a href="#">soluzioni aziendali</a></li>
         </ul>
       </nav>
+      <nav class="nav_right">
+        <ul>
+          <li><a href="#">diventa un tutor</a></li>
+          <li><button class="button no_bkg_header">login</button></li>
+          <li><button class="button bkg_green_header">stuttura un piano</button></li>
+        </ul>
+      </nav>
     </section>
 
-    <section class="display">h1</section>
+    <section class="display padding_default">
+      <div class="text_display">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </section>
    </header>
    <main>
-    <section class="banner">banner</section>
+    <section class="banner">
+      <div class="title_banner">
+        <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
+        <h3>o un corso incentrato sulla Fluency pu&ograve;	portare ad una soluzione definitiva concreta</h3>
+      </div>
+    </section>
     <section class="maintop"></section>
     <section class="mainbottom"></section>
    </main>
