--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    <header>
-    <section class="navbar clear padding_default">
+    <section class="navbar clear margin_default">
       <nav class="nav_left">
         <ul>
           <li><img src="img/logo.png" alt="logo del sito"></li>
@@ -27,9 +27,10 @@
       </nav>
     </section>
 
-    <section class="display padding_default">
+    <section class="display margin_default">
       <div class="text_display">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <h1>Scegli l'inglese studiato per i soli professionisti</h1>
+        <button class="button bkg_green_display">STRUTTURA UN PIANO</button>
       </div>
     </section>
    </header>
@@ -37,11 +38,31 @@
     <section class="banner">
       <div class="title_banner">
         <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
-        <h3>o un corso incentrato sulla Fluency pu&ograve;	portare ad una soluzione definitiva concreta</h3>
+        <h3>Solo un corso incentrato sulla Fluency pu&ograve;	portare ad una soluzione definitiva concreta.</h3>
       </div>
     </section>
-    <section class="maintop"></section>
-    <section class="mainbottom"></section>
+    <section class="maintop margin_default clear">
+      <div class="maintop_left float_left">
+        <img src="img/profile.png" alt="icona profile">
+        <h3>Piano formativo configurato sul proprio livello</h3>
+        <hr>
+        <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obbiettivi da raggiungere.</p>
+      </div>
+      <div class="maintop_center float_left">
+        <img src="img/computer.png" alt="icona computer">
+        <h3>Affiancamento costante del tutor</h3>
+        <hr>
+        <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontarli con il tutor nelle sessioni one-to-one.</p>
+      </div>
+      <div class="maintop_right float_left">
+        <img src="img/doc.png" alt="icona documento">
+        <h3>Monitora i tuoi progressi costantemente</h3>
+        <hr>
+        <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controlla su miglioramenti e obbiettivi raggiunti</p>
+      </div>
+    </section>
+    <hr class="hr_main">
+    <section class="mainbottom margin_default"></section>
    </main>
    <footer>
 
