commit finale per oggi ;)

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Fluenty</title>
+    <title>Fluentify</title>
   </head>
   <body>
    <header>
     <section class="navbar clear margin_default">
-      <nav class="nav_left">
+      <nav class="nav_left float_left">
         <ul>
           <li><img src="img/logo.png" alt="logo del sito"></li>
           <li><a href="#">il metodo</a></li>
@@ -18,7 +19,7 @@
           <li><a href="#">soluzioni aziendali</a></li>
         </ul>
       </nav>
-      <nav class="nav_right">
+      <nav class="nav_right float_right">
         <ul>
           <li><a href="#">diventa un tutor</a></li>
           <li><button class="button no_bkg_header">login</button></li>
@@ -42,30 +43,54 @@
       </div>
     </section>
     <section class="maintop margin_default clear">
-      <div class="maintop_left float_left">
+      <div class="maintop_col float_left">
         <img src="img/profile.png" alt="icona profile">
         <h3>Piano formativo configurato sul proprio livello</h3>
         <hr>
         <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obbiettivi da raggiungere.</p>
       </div>
-      <div class="maintop_center float_left">
+      <div class="maintop_col float_left">
         <img src="img/computer.png" alt="icona computer">
         <h3>Affiancamento costante del tutor</h3>
         <hr>
         <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontarli con il tutor nelle sessioni one-to-one.</p>
       </div>
-      <div class="maintop_right float_left">
+      <div class="maintop_col float_left">
         <img src="img/doc.png" alt="icona documento">
         <h3>Monitora i tuoi progressi costantemente</h3>
         <hr>
         <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controlla su miglioramenti e obbiettivi raggiunti</p>
       </div>
     </section>
+
     <hr class="hr_main">
-    <section class="mainbottom margin_default"></section>
+
+    <section class="mainbottom margin_default clear">
+      <div class="mainbottom_col float_left">
+        <img src="img/mountain.png" alt="level success">
+      </div>
+      <div class="mainbottom_col float_left">
+        <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+        <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+        <a href="#">Scopri il nostro test di placement</a>
+      </div>
+    </section>
    </main>
    <footer>
-
+     <div class="footer">
+       <span class="footer_left">
+         <h3>Struttura un piano</h3>
+       </span>
+       <span class="footer_right">
+         <span>
+           Sono <p>Seleziona&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <i class="fas fa-chevron-down"></i><!----></p>
+         </span>
+         <span>
+           <button class="button bkg_green_display">VISUALIZZA IL TUO PIANO</button>
+         </span>
+       </span>
+      </div>
    </footer>
   </body>
 </html>
