--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
          </span>
        </span>
       </div>
+      <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS Valido!" /></a>
+      </p>
    </footer>
+
+   <button class="help button bkg_green_display">HELP</button>
   </body>
 </html>
