--- a/index.html
+++ b/index.html
@@ -42,60 +42,63 @@
         <h3>Solo un corso incentrato sulla Fluency pu&ograve;	portare ad una soluzione definitiva concreta.</h3>
       </div>
     </section>
-    <section class="maintop margin_default clear">
-      <div class="maintop_col float_left">
+    <section class="main_one margin_default clear">
+      <div class="main_one_col float_left">
         <img src="img/profile.png" alt="icona profile">
         <h3>Piano formativo configurato sul proprio livello</h3>
         <hr>
         <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obbiettivi da raggiungere.</p>
       </div>
-      <div class="maintop_col float_left">
+      <div class="main_one_col float_left">
         <img src="img/computer.png" alt="icona computer">
         <h3>Affiancamento costante del tutor</h3>
         <hr>
         <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontarli con il tutor nelle sessioni one-to-one.</p>
       </div>
-      <div class="maintop_col float_left">
+      <div class="main_one_col float_left">
         <img src="img/doc.png" alt="icona documento">
         <h3>Monitora i tuoi progressi costantemente</h3>
         <hr>
         <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controlla su miglioramenti e obbiettivi raggiunti</p>
       </div>
     </section>
-
     <hr class="hr_main">
-
-    <section class="mainbottom margin_default clear">
-      <div class="mainbottom_col float_left">
+    <section class="main_two margin_default clear">
+      <div class="main_two_col float_left">
         <img src="img/mountain.png" alt="level success">
       </div>
-      <div class="mainbottom_col float_left">
+      <div class="main_two_col float_left">
         <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
         <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
         <a href="#">Scopri il nostro test di placement</a>
       </div>
     </section>
+    <section class="main_three">
+      <div class="main_three">
+        <span class="main_three_left">
+          <h3>Struttura un piano</h3>
+        </span>
+        <span class="main_three_right">
+          <span>
+            Sono <p>Seleziona&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <i class="fas fa-chevron-down"></i><!----></p>
+          </span>
+          <span>
+            <button class="button bkg_green_display">VISUALIZZA IL TUO PIANO</button>
+          </span>
+        </span>
+       </div>
+    </section>
    </main>
-   <footer>
-     <div class="footer">
-       <span class="footer_left">
-         <h3>Struttura un piano</h3>
-       </span>
-       <span class="footer_right">
-         <span>
-           Sono <p>Seleziona&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-             <i class="fas fa-chevron-down"></i><!----></p>
-         </span>
-         <span>
-           <button class="button bkg_green_display">VISUALIZZA IL TUO PIANO</button>
-         </span>
-       </span>
-      </div>
+    <footer>
+
+
       <p>
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS Valido!" /></a>
       </p>
-   </footer>
+
+    </footer>
 
    <button class="help button bkg_green_display">HELP</button>
   </body>
